2004-11-22  Hans-Peter Nilsson  <hp@axis.com>

	* read.c (potable): Add "error" and "warning".
	(s_errwarn): New function.
	* read.h (s_errwarn): Declare.
	* doc/as.texinfo (Error, Warning): Document .error and .warning.

2004-11-22  Nick Clifton  <nickc@redhat.com>

	* config/tc-tic54x.c (tic54x_adjust_symtab): Adjust call to
	c_dot_file_symbol.

2004-11-19  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-msp430.c (struct rcodes_s, MSP430_RLC, msp430_rcodes,
	struct hcodes_s, msp430_hcodes): From include/opcode/msp430.h.

2004-11-19  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-coff.c (c_dot_file_symbol): Add "app" param.
	(coff_adjust_symtab): Adjust call.
	(crawl_symbols): Likewise.
	* config/obj-coff.h (c_dot_file_symbol): Add "app" param.
	(obj_app_file): Adjust.

2004-11-18  Inderpreet Singh   <inderpreetb@nioda.hcltech.com>

	* configure.in: Enable bfd_assember for the MAXQ port.
	* configure: Regenerate.

2004-11-12  Bob Wilson  <bob.wilson@acm.org>
	    Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.c (finish_vinsn): Clear pending instruction if
	there is a conflict.
	(check_t1_t2_reads_and_writes): Check for both reads and writes to
	interfaces that are related as determined by xtensa_interface_class_id.

2004-11-12  Nick Clifton  <nickc@redhat.com>

	* config/tc-mn10300.c (md_relax_table): Fix off by one negative
	offsets for conditional branches.

2004-11-11  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (MAX_IMMED6): Change value to 65.

2004-11-10  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (update_next_frag_state): Always add a NOP if
	relaxing at the end of a loop.  Don't mark frags as UNREACHABLE or
	MAYBE_UNREACHABLE.
	(relax_frag_immed): Update call to update_next_frag_state.

2004-11-10  Alan Modra  <amodra@bigpond.net.au>

	* obj.h (struct format_ops <app_file>): Add int param.
	* read.h (s_app_file_string): Likewise.
	* read.c (s_app_file_string): Likewise.