@@ -1356,13 +1356,12 @@ dwarf2_finish (void)
   struct line_seg *s;
 
   /* We don't need to do anything unless:
-     - Some debug information was recorded via .file/.loc
-     - or, we are generating DWARF2 information ourself (--gdwarf2)
+     - Some debug information was recorded via .file/.loc or
+       generated by GAS (--gdwarf2)
      - or, there is a user-provided .debug_info section which could
        reference the file table in the .debug_line section we generate
        below.  */
   if (all_segs == NULL
-      && debug_type != DEBUG_DWARF2
       && (bfd_get_section_by_name (stdoutput, ".debug_info") == NULL
 	  || files_in_use == 0))
     return;
