@@ -1,3 +1,8 @@
+2004-11-22  Bob Wilson  <bob.wilson@acm.org>
+
+	* dwarf2dbg.c (dwarf2_finish): Don't write a .debug_line section
+	without a corresponding .debug_info section.
+
 2004-11-22  Hans-Peter Nilsson  <hp@axis.com>
 
 	* read.c (potable): Add "error" and "warning".
